Addressed issue with card stuck on playtester by removing the container

--- a/_assets/css/playtest.scss
+++ b/_assets/css/playtest.scss
@@ -93,7 +93,7 @@
       margin-bottom: 20px;
       clear: both;
       display: flex;
-      .testcard-slot, .hand, .field
+      .testcard-slot, .field
       {
         border: 1px solid white;
         border-radius: 4px;
@@ -121,6 +121,38 @@
         {
           border-radius: 0px;
         }
+      }
+    }
+
+    .hand
+    {
+      border: 1px solid white;
+      border-radius: 4px;
+      margin-left: 15px;
+      margin-right: 15px;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      height: 102px;
+      width: 70px;
+      float: left;
+      img
+      {
+        width: 100%;
+
+        &.rotated
+        {
+          transform: rotate(270deg);
+        }
+      }
+
+      &:first-child
+      {
+        border-radius: 0px;
+      }
+
+      &:last-child
+      {
+        border-radius: 0px;
       }
     }
 
